maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:20: error: ')' expected but 'if' found.
	if ((!aMurSud(x,y) && (getIndication(x,y-1)==9999) {
        ^JediEscaper:24: error: ')' expected but 'if' found.
	if ((!aMurOuest(x,y) && (getIndication(x-1,y)==9999) {
        ^JediEscaper:28: error: ')' expected but 'if' found.
	if ((!aMurEst(x,y) && (getIndication(x+1,y)==9999) {
        ^JediEscaper:34: error: ')' expected but '}' found.
}
^